--- a/src/pages/Register/index.sass
+++ b/src/pages/Register/index.sass
@@ -1,3 +1,4 @@
+$mainColor: #F1BD5B
 *:focus 
   outline: none
 
@@ -56,16 +57,16 @@ input[type="password"]
 
 input[type="text"]:focus,
 input[type="password"]:focus 
-  border-bottom: 2px solid #16a085
+  border-bottom: 2px solid $mainColor
   color: #16a085
   transition: 0.2s ease
 
 
 input[type="submit"] 
-  margin-top: 28px
+  margin-top: 70px
   width: 120px
   height: 32px
-  background: #16a085
+  background: $mainColor
   border: none
   border-radius: 2px
   color: #FFF
@@ -110,7 +111,7 @@ input[type="submit"]:active
   padding-top: 40px
   width: 300px
   height: 400px
-  background: url('https://goo.gl/YbktSj')
+  background: url('../../assets/RegisterBackGround.jpg')
   background-size: cover
   background-position: center
   border-radius: 0 2px 2px 0
